@@ -1,0 +1,15 @@
+<header>Website Redirects</header>
+
+A redirect maps some URL path like /foo to either a different URL, or a 
+different directory on the same virtual server. This can be used to provide
+more friendly URL paths on your website, or to cope with the movement of
+web pages to new locations. <p>
+
+This page lists all existing redirects, and allows you to create a new one
+by clicking on the <b>Add a new website redirect</b> link. To edit an existing
+redirect, just click on it's source URL path. To remove multiple redirects,
+check the boxes next to them and click the <b>Delete</b> button at the bottom
+of the page. <p>
+
+<footer>
+
