@@ -1206,3 +1206,4 @@ Added --autoreply-start, --autoreply-end and --autoreply-period flags to the mod
 Added a Module Config option under Defaults for new domains to set the characters which random passwords are made up of.
 Added buttons to enable or disable multiple resellers at once.
 The MySQL default collation order for new databases can now be set on the database creation form, and in the MySQL section of a server template.
+Added the Website Redirects page, for easily creating aliases from URL paths to directories, and redirects from URL paths to other websites.
